--- a/front-end/src/app/globals.css
+++ b/front-end/src/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: bisque;
+    --background: lightgray;
     --foreground: #ededed;
   }
 }
